[package]
name = "tree-sitter-stim"
description = "Stim circuit parser"
version = "0.1.0"
authors = ["Louis Vignoli <louis.vignoli@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "stim"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lvignoli/tree-sitter-stim"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
